--- a/ZAFrame.ImageProcess/ZAFrame.ImageProcess.csproj
+++ b/ZAFrame.ImageProcess/ZAFrame.ImageProcess.csproj
@@ -10,21 +10,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="AFBaseNode.cs" />
-    <Compile Include="ImageProcessHelper.cs" />
-    <Compile Include="LogicalNode.cs" />
-    <Compile Include="MeasureElement.cs" />
-    <Compile Include="MeasureFactory.cs" />
-    <Compile Include="MeasureNode.cs" />
-    <Compile Include="Test.cs" />
-    <Compile Include="Test.Designer.cs" />
+    <Compile Include="JsonHelper.cs" />
   </ItemGroup>
 
-  <ItemGroup>
-    <EmbeddedResource Include="Test.resx" />
-  </ItemGroup>
+  
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="OpenCvSharp4" Version="4.6.0.20220608" />
     <PackageReference Include="OpenCvSharp4.Extensions" Version="4.6.0.20220608" />
     <PackageReference Include="OpenCvSharp4.runtime.win" Version="4.6.0.20220608" />
@@ -33,6 +25,10 @@
   <ItemGroup>
     <Folder Include="Measure\" />
     <Folder Include="UI\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="ClassDiagram1.cd" />
   </ItemGroup>
 
 </Project>
